# odoo

./: .env_template  .gitignore  pyproject.toml
.devcontainer/: Dockerfile.dev  Dockerfile.dev.old  devcontainer.json  docker-compose.dev.old.yml  docker-compose.yml
odoo/: sql_db.py
