[tool.poetry]
name = "odoo-source-fork"
version = "17"
description = ""
authors = ["Sean McCarthy <sean.mccarthy@hotmail.com>"]
readme = "README.md"
packages = [{include = "odoo_source_fork"}]

[tool.poetry.dependencies]
python = "^3.10"
Babel = "^2.13.1"
chardet = "^5.2.0"
cryptography = "^41.0.7"
decorator = "^5.1.1"
docutils = "^0.20.1"
geoip2 = "^4.8.0"
gevent = "^23.9.1"
greenlet = "^3.0.2"
idna = "^3.6"
Jinja2 = "^3.1.2"
lxml = "^4.9.3"
libsass = "^0.22.0"
MarkupSafe = "^2.1.3"
num2words = "^0.5.13"
ofxparse = "^0.21"
passlib = "^1.7.4"
Pillow = "^10.1.0"
polib = "^1.2.0"
psutil = "^5.9.6"
pydot = "^1.4.2"
pyopenssl = "^23.3.0"
pypdf2 = "^3.0.1"
pyserial = "^3.5"
python-dateutil = "^2.8.2"
python-stdnum = "^1.19"
pytz = "^2023.3.post1"
pyusb = "^1.2.1"
qrcode = "^7.4.2"
reportlab = "^4.0.7"
rjsmin = "^1.2.2"
requests = "^2.31.0"
urllib3 = "^2.1.0"
vobject = "^0.9.6.1"
werkzeug = "2.3.8"
xlrd = "^2.0.1"
xlsxwriter = "^3.1.9"
xlwt = "^1.3.0"
zeep = "^4.2.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
freezegun = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
